[package]
name = "explicon"
version = "0.2.0"
edition = "2024"
description = "Configuration without surprises"
license = "MIT"
repository = "https://github.com/metdxt/explicon"
authors = ["METDXT <metdxt@obj.su>"]
keywords = ["config", "configuration"]
categories = ["config"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
